# dji-tello-playground

./: README.md  auto.py  control.py  main.py  main2.py  main3.py  teleop.py  utils.py
commands/: CancelCommand.py  PIDCommand.py  ScheduleCommand.py  __init__.py  command.py  command_runner.py  conditional_command.py  parallel_command.py  parallel_race_command.py  perpetual_command.py  repeat_command.py  sequential_command.py  wait_command.py  wait_until_command.py
controller/: xbox_controller.py
drone/: drone.py  drone_controller.py  fake_drone.py  simple_drone.py  tello.py
drone/advanced/: __init__.py  connection.py  crc.py  flips.py  licenses  proc.py  sdk.py  (+9 more)
drone_commands/: HomeCommand.py  __init__.py  align_face.py  auto_test_command.py  emergency_command.py  flip_backward_command.py  flip_command.py  flip_forward_command.py  flip_left_command.py  flip_right_command.py  fly_command.py  fly_square_command.py  fly_to_command.py  height_command.py  height_estimation_command.py  land_command.py  palm_land_command.py  print_command.py  reset_heading_command.py  rotate_command.py  sensor_update_command.py  show_video_command.py  stop_command.py  takeoff_command.py  test_command.py  toggle_altitude_hold_command.py  toggle_flight_command.py  toggle_headless_command.py  value_display_command.py
filter/: linear_combination_filter.py  linear_motion_filter.py  pid.py
ui/: easy_draw.py
video/: h264_decoder.py  python2_h264_udp_decoder.py  python_2_h264_decoder.py  tello_camera.py  video.py  video2.py
video/h264-decode/: Cargo.toml
video/h264-decode/src/: lib.rs
(+14 files in other folders)
