[package]
name = "h264-decode"
version = "0.1.0"
authors = ["Kyle Corry <kylecorry31@gmail.com>"]
edition = "2018"

[lib]
name = "h264_decode_ffi"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openh264 = "0.2.13"
safer-ffi = "0.0.7"